src/styles/globals.css
@tailwind base;

:root {
  --scrollPrimary: transparent;
  --scrollSecondary: rgb(195, 195, 196);
}

/* Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: var(--scrollSecondary) var(--scrollPrimary);
}

/* Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 8px;
}

*::-webkit-scrollbar-track {
  background: var(--scrollPrimary);
  border-radius: 5px;
}

*::-webkit-scrollbar-thumb {
  background-color: var(--scrollSecondary);
  border-radius: 14px;
  border: 3px solid var(--scrollPrimary);
}


@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    font-synthesis: none;
    text-rendering: optimizeLegibility;
    font-feature-settings: "salt";
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;


    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;
 
    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;
 
    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;
 
    --card: 0 0% 100%;
    --card-foreground: 222.2 84% 4.9%;
 
    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;
 
    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;
 
    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;
 
    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;
 
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;
 
    --ring: 215 20.2% 65.1%;
 
    --radius: 0.5rem;
  }
 
  .dark {
    --background: 222.2 84% 4.9%;
    --foreground: 210 40% 98%;
 
    --muted: 217.2 32.6% 17.5%;
    --muted-foreground: 215 20.2% 65.1%;
 
    --popover: 222.2 84% 4.9%;
    --popover-foreground: 210 40% 98%;
 
    --card: 222.2 84% 4.9%;
    --card-foreground: 210 40% 98%;
 
    --border: 217.2 32.6% 17.5%;
    --input: 217.2 32.6% 17.5%;
 
    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 11.2%;
 
    --secondary: 217.2 32.6% 17.5%;
    --secondary-foreground: 210 40% 98%;
 
    --accent: 217.2 32.6% 17.5%;
    --accent-foreground: 210 40% 98%;
 
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 85.7% 97.3%;
 
    --ring: 217.2 32.6% 17.5%;
  }
}
 
@layer base {
  * {
    @apply border-border;
    font-family: Inter var, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji" !important;
    font-synthesis: none;
    text-rendering: optimizeLegibility;
    font-feature-settings: "salt";
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -webkit-text-size-adjust: 100%;
  }
  body {
    @apply bg-background text-foreground max-w-[100vw] overflow-x-hidden;
  }
}

input {
  font-size: 16px !important;
}

li[data-type="success"] {
  @apply !bg-green-500 !text-white !border-green-600;
}

li[data-type="error"] {
  @apply !bg-red-500 !text-white !border-red-600;
}

.page-width {
  @apply w-[95vw] lg:max-w-[1200px] lg:w-full px-3;
  margin: 0 auto;
}

.handwriting {
  font-family: 'Rock Salt', cursive !important;
}

.fade_rule {
  height: 1px;
  background-color: #E6E6E6;
  width: 100%;
  margin: 0 auto;
  background-image: linear-gradient(to right , white 2%, #E6E6E6 50%, white 98%);
  background-image: -o-linear-gradient(to right , white 2%, #E6E6E6 50%, white 98%);
  background-image: -moz-linear-gradient(to right , white 2%, #E6E6E6 50%, white 98%);
  background-image: -webkit-linear-gradient(to right , white 2%, #E6E6E6 50%, white 98%);
  background-image: -ms-linear-gradient(left , white 2%, #E6E6E6 50%, white 98%);
  background-image: -webkit-gradient( linear, left bottom, right bottom, color-stop(0.02, white), color-stop(0.5, gray), color-stop(0.98, white) );
}

.dark .fade_rule {
  background-color: black;
  background-image: linear-gradient(to right , black 2%, #E6E6E6 50%, black 98%);
  background-image: -o-linear-gradient(to right , black 2%, #E6E6E6 50%, black 98%);
  background-image: -moz-linear-gradient(to right , black 2%, #E6E6E6 50%, black 98%);
  background-image: -webkit-linear-gradient(to right , black 2%, #E6E6E6 50%, black 98%);
  background-image: -ms-linear-gradient(left , black 2%, #E6E6E6 50%, black 98%);
  background-image: -webkit-gradient( linear, left bottom, right bottom, color-stop(0.02, black), color-stop(0.5, gray), color-stop(0.98, black) );
}

.msg {
  @apply px-2 rounded-md shadow-sm max-w-[80%] md:max-w-[60%] ;
}

.msg.user {
  @apply bg-blue-600 text-white self-end;
}

.msg.bot {
  @apply bg-gray-200 text-gray-800 dark:bg-gray-800 dark:text-gray-200 self-start;
}

.msg table {
  @apply border border-solid border-gray-500 dark:border-gray-100 bg-white dark:bg-black w-[90%];
}

.msg table tr {
  @apply border border-solid border-gray-500 dark:border-gray-100 w-[90%];
}

.msg pre {
  @apply bg-black p-2 text-white rounded-md;
}

.msg p {
  @apply my-2;
}

